# Jichange_Mobile_App

./: .gitignore  CMakeLists.txt
FelgoLive/: Imports.qml
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
build-testing-Felgo_SDK_Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-testing-Felgo_SDK_Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-68827291dcae977881fd.json  cmakeFiles-v1-60a7cdf9057c0f65da9a.json  codemodel-v2-1733f8f7cfea524eccda.json  index-2024-04-09T05-23-23-0750.json  target-auth-Debug-60d0eae526e3d8b76a6f.json
build-testing-Felgo_SDK_Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-testing-Felgo_SDK_Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.D8C35F6ACD2E9256.idx  __wmmintrin_aes.h.BBEE9175116CE5FB.idx  __wmmintrin_pclmul.h.19820DB55C15C1BC.idx  _bsd_types.h.E9CE890CEDAF3C5D.idx  _fd_types.h.60B230A3AE7B3FE0.idx  _ip_mreq1.h.CE8799C5DA530CA8.idx  _ip_types.h.F388382B0E65E0EE.idx  _mingw.h.B44CCFAC3360DE4F.idx  _mingw_ddk.h.9A6A1F62D7E35350.idx  _mingw_mac.h.5D32E80BB76BBE4C.idx  _mingw_off_t.h.8240EE0AF8B2C942.idx  _mingw_secapi.h.2D37C7BA2CF4AE21.idx  _mingw_stat64.h.6872B6408A5D488A.idx  _mingw_unicode.h.2962D04F12BC8CCF.idx  _socket_types.h.7FCBAA0346CB649E.idx  _timeval.h.5C0D015012D1DB19.idx  _wsa_errnos.h.0D42C0E7138283F8.idx  _wsadata.h.E2BE81B6D3547F1C.idx  _xmitfile.h.6FC5F123A1CC8BBE.idx  adxintrin.h.2673441F56DEBF87.idx  algorithm.775A95AB550FF067.idx  algorithmfwd.h.35FAB0735152C0B8.idx  align.h.1417054FD08DD6B6.idx  aligned_buffer.h.046C4F97A2C6EDFB.idx  alloc_traits.h.AD93FDECEB64210D.idx  alloc_traits.h.E3F3C7B2EA7C3528.idx  allocated_ptr.h.1E26ECC4CE4D2865.idx  allocator.h.1F562A9C61B7515C.idx  ammintrin.h.56277CCA975AC269.idx  amxintrin.h.AA43BB9512ABE9FA.idx  apiset.h.EE65964043CF21E2.idx  apisetcconv.h.D5CF303E73ABFAAB.idx  array.FA96D9AB9303812E.idx  assert.h.F0F393C58C9ECF0D.idx  assertions.h.AAD281B29D11AEA1.idx  atomic.74574ECE161C7DCD.idx  atomic_base.h.BFB6A6D5658D32A2.idx  atomic_lockfree_defines.h.C0E74D96320FFB55.idx  atomic_word.h.C9DB7690497BF1E0.idx  atomicity.h.D11357754A1FD0BF.idx  (+468 more)
include/: customerstablemodel.h  latesttransactionstablemodel.h
include/entities/: branch.h  companyuser.h
include/forms/: companyuserform.h  customerform.h  formvalidator.h  invoiceform.h  vendorregistrationform.h  vendorreportform.h
include/models/: branchlistitems.h  branchlistmodel.h
include/requests/: authrequests.h  companyusersrequests.h  invoicerequests.h  requests.h  setupbranch.h  setuprequests.h
ios/: Project-Info.plist
qml/: AuthPage.qml  Main.qml  VendorNavigation.qml  config.json
qml/components/: Breadcrumbs.qml  DashboardLatestTransactionsTable.qml  DashboardOverview.qml  FilterDrawer.qml  ForgotPassword.qml  LoginForm.qml  VendorRegistration.qml
qml/delegates/: InvoiceItemDelegate.qml
qml/list_models/: DashboardOverviewModel.qml
qml/pages/: AddCustomerPage.qml  AddInvoicePage.qml  CompanyUsersPage.qml  CustomersPage.qml  DashboardPage.qml  ForgotPasswordPage.qml  GeneratedInvoicePage.qml  InvoiceDetailsPage.qml  LoginPage.qml  UserProfilePage.qml  VendorRegistrationPage.qml
qml/reusables/: BusyLoader.qml  CustomButton.qml  CustomButton_v1.qml  CustomButton_v2.qml  CustomButton_v3.qml  CustomPaginator.qml  CustomTextComboBox.qml  DatePickerExpandingSections.qml  DateRangeComboBox.qml  FilterButton.qml  TableListTabBar.qml  TitleText.qml  ValidatedComboBoxField.qml  ValidatedDateField.qml  ValidatedField.qml
qml/scripts/: requester.js  utilities.js
src/: customerstablemodel.cpp  latesttransactionstablemodel.cpp  main.cpp
src/entities/: branch.cpp  companyuser.cpp
src/forms/: companyuserform.cpp  customerform.cpp  formvalidator.cpp  invoiceform.cpp  vendorregistrationform.cpp  vendorreportform.cpp
src/models/: branchlistitems.cpp  branchlistmodel.cpp
src/requests/: authrequests.cpp  companyusersrequests.cpp  invoicerequests.cpp  requests.cpp  setupbranch.cpp  setuprequests.cpp
testing/: CMakeLists.txt  tst_auth.cpp  tst_company_users.cpp  tst_company_users_form.cpp  tst_customer_form.cpp  tst_invoice.cpp  tst_invoice_form.cpp  tst_setup_branch.cpp  tst_vendor_registration_form.cpp  tst_vendor_report_form.cpp
tests/: CMakeLists.txt  tst_chatbot_tests.cpp  tst_login_tests.cpp
tests/setup/: tst_branch_tests.cpp  tst_country_tests.cpp  tst_setup_tests.cpp
